--- a/tets/frame.html
+++ b/tets/frame.html
@@ -1,291 +1,373 @@
 <style>
-	.colorButtons {
-		display: block;
-		margin: 20px 0;
-	}
+    .colorButtons {
+        display: block;
+        margin: 20px 0;
+    }
 
-	canvas {
-		cursor: crosshair;
-	}
+    canvas {
+        cursor: crosshair;
+    }
 
-	div#sidebar {
-		position: absolute;
-		left: 0;
-		width: 150px;
-		padding: 20px 20px;
-		top: 0;
-	}
+    div#sidebar {
+        position: absolute;
+        left: 0;
+        width: 150px;
+        padding: 20px 20px;
+        top: 0;
+    }
 
-	canvas#canvas {
-		left: 200px;
-		top: 30px;
-	}
+    canvas#canvas {
+        left: 200px;
+        top: 30px;
+    }
 
-	.btn {
-		margin-bottom: 10px;
-		width: 100%;
-	}
+    .btn {
+        margin-bottom: 10px;
+        width: 100%;
+    }
 
-	input {
-		width: 100%;
-		margin-bottom: 10px;
-	}
+    input {
+        width: 100%;
+        margin-bottom: 10px;
+    }
 
-	.input-group {
-		margin-bottom: 10px;
-	}
+    .input-group {
+        margin-bottom: 10px;
+    }
 
-	.toolsButtons .btn {
-		width: 40%;
-	}
+    .toolsButtons .btn {
+        width: 40%;
+    }
 
-	.sizeButtons .btn {
-		width: 40%;
-	}
+    .sizeButtons .btn {
+        width: 40%;
+    }
 
-	.colorpicker {
-		background: transparent;
-		height: 40px;
-	}
+    .colorpicker {
+        background: transparent;
+        height: 40px;
+    }
+
+    /* Additional style for bucket color picker */
+    .bucket-color-picker {
+        display: none;
+        margin-top: 10px;
+    }
 </style>
 
-<body style=" background-color: #2E2929; color: #CCCCCC; font-family: 'Lato', serif;">
-	<!-- <body> -->
-	<div id="sidebar" style="margin-right: 5%;">
+<body style="background-color: #2E2929; color: #CCCCCC; font-family: 'Lato', serif;">
+    <div id="sidebar" style="margin-right: 5%;">
+        <div class="colorButtons">
+			<h3>pen color</h3>
+            <input type="color" id="colorpicker" value="#c81464" class="colorpicker">
+        </div>
 
-		<div class="colorButtons">
-			<input type="color" id="colorpicker" value="#c81464" class="colorpicker">
-		</div>
-		<div class="colorButtons">
-			<h3>Bg Color</h3>
-			<input type="color" value="#ffffff" id="bgcolorpicker" class="colorpicker">
-		</div>
+        <div class="colorButtons">
+            <h3>Bg Color</h3>
+            <input type="color" value="#ffffff" id="bgcolorpicker" class="colorpicker">
+        </div>
 
-		<div class="toolsButtons">
-			<h3>Tools</h3>
+        <div class="toolsButtons">
+            <h3>Tools</h3>
+            <button id="eraser" class="btn btn-default"> eraser <span class="glyphicon glyphicon-erase"
+                    aria-hidden="true"></span></button>
+            <button id="clear" class="btn btn-danger">clear <span class="glyphicon glyphicon-repeat"
+                    aria-hidden="true"></span></button>
+            <button id="bucket" class="btn btn-primary">bucket <span class="glyphicon glyphicon-tint"
+                    aria-hidden="true"></span></button>
+            <input type="color" id="bucketColorPicker" value="#ffffff" class="colorpicker bucket-color-picker">
+        </div>
 
-			<button id="eraser" class="btn btn-default"> eraser <span class="glyphicon glyphicon-erase"
-					aria-hidden="true"></span></button>
-			<button id="clear" class="btn btn-danger">clear <span class="glyphicon glyphicon-repeat"
-					aria-hidden="true"></span></button>
-		</div>
+        <div class="buttonSize">
+            <h3>Size (<span id="showSize">5</span>)</h3>
+            <input type="range" min="1" max="50" value="5" step="1" id="controlSize">
+        </div>
 
-		<div class="buttonSize">
-			<h3>Size (<span id="showSize">5</span>)</h3>
-			<input type="range" min="1" max="50" value="5" step="1" id="controlSize">
-		</div>
+        <div class="canvasSize">
+            <h3>Canvas</h3>
+            <div class="input-group">
+                <span class="input-group-addon">X</span>
+                <input type="number" id="sizeX" class="form-control" placeholder="sizeX" value="500" class="size">
+            </div>
 
-		<div class="canvasSize">
-			<h3>Canvas</h3>
+            <div class="input-group">
+                <span class="input-group-addon">Y</span>
+                <input type="number" id="sizeY" class="form-control" placeholder="sizeY" value="500" class="size">
+            </div>
 
-			<div class="input-group">
-				<span class="input-group-addon">X</span>
-				<input type="number" id="sizeX" class="form-control" placeholder="sizeX" value="500" class="size">
-			</div>
+            <input type="button" class="updateSize btn btn-success" value="Update" id="canvasUpdate">
+        </div>
 
-			<div class="input-group">
-				<span class="input-group-addon">Y</span>
-				<input type="number" id="sizeY" class="form-control" placeholder="sizeY" value="500" class="size">
-			</div>
-
-			<input type="button" class="updateSize btn btn-success" value="Update" id="canvasUpdate">
-		</div>
-
-		<div class="Storage">
-			<h3>Storage</h3>
-			<input type="button" value="Save" class="btn btn-warning" id="save">
-			<input type="button" value="Load" class="btn btn-warning" id="load">
-			<input type="button" value="Clear" class="btn btn-warning" id="clearCache">
-		</div>
-
-		<div class="extra">
-			<h3>Extra</h3>
-			<a id="saveToImage" class="btn btn-warning">Download</a>
-		</div>
-
-	</div>
+        <div class="Storage">
+            <h3>Storage</h3>
+            <input type="button" value="Save" class="btn btn-warning" id="save">
+            <input type="button" value="Load" class="btn btn-warning" id="load">
+            <input type="button" value="Clear" class="btn btn-warning" id="clearCache">
+        </div>
+		
+        <div class="extra">
+            <h3>Extra</h3>
+            <a id="saveToImage" class="btn btn-warning">Download</a>
+        </div>
+    </div>
 </body>
 
 <script>
+    // SETTING ALL VARIABLES
+    var isMouseDown = false;
+    var canvas = document.createElement('canvas');
+    var body = document.getElementsByTagName("body")[0];
+    var ctx = canvas.getContext('2d');
+    var linesArray = [];
+    currentSize = 5;
+    var currentColor = "rgb(200,20,100)";
+    var currentBg = "white";
+    var bucketColor = "#ffffff"; // Default bucket color
 
-	// SETTING ALL VARIABLES
+    // INITIAL LAUNCH
+    createCanvas();
 
-	var isMouseDown = false;
-	var canvas = document.createElement('canvas');
-	var body = document.getElementsByTagName("body")[0];
-	var ctx = canvas.getContext('2d');
-	var linesArray = [];
-	currentSize = 5;
-	var currentColor = "rgb(200,20,100)";
-	var currentBg = "white";
+    // BUTTON EVENT HANDLERS
+    document.getElementById('canvasUpdate').addEventListener('click', function () {
+        createCanvas();
+        redraw();
+    });
+    document.getElementById('colorpicker').addEventListener('change', function () {
+        currentColor = this.value;
+    });
+    document.getElementById('bgcolorpicker').addEventListener('change', function () {
+        ctx.fillStyle = this.value;
+        ctx.fillRect(0, 0, canvas.width, canvas.height);
+        redraw();
+        currentBg = ctx.fillStyle;
+    });
 
-	// INITIAL LAUNCH
+    document.getElementById('bucket').addEventListener('click', function(event) {
+        event.preventDefault(); // Prevent default action on click
+        // Show bucket color picker when bucket button is clicked
+        var bucketColorPicker = document.getElementById('bucketColorPicker');
+        if (bucketColorPicker.style.display === 'none') {
+            bucketColorPicker.style.display = 'block';
+        } else {
+            bucketColorPicker.style.display = 'none';
+        }
+    });
 
-	createCanvas();
+    // Adjusted event listener for the bucket color picker
+    document.getElementById('bucketColorPicker').addEventListener('change', function () {
+        bucketColor = this.value;
+    });
 
-	// BUTTON EVENT HANDLERS
+    document.getElementById('controlSize').addEventListener('change', function () {
+        currentSize = this.value;
+        document.getElementById("showSize").innerHTML = this.value;
+    });
+    document.getElementById('saveToImage').addEventListener('click', function () {
+        downloadCanvas(this, 'canvas', 'masterpiece.png');
+    }, false);
+    document.getElementById('eraser').addEventListener('click', eraser);
+    document.getElementById('clear').addEventListener('click', createCanvas);
+    document.getElementById('save').addEventListener('click', save);
+    document.getElementById('load').addEventListener('click', load);
+    document.getElementById('clearCache').addEventListener('click', function () {
+        localStorage.removeItem("savedCanvas");
+        linesArray = [];
+        console.log("Cache cleared!");
+    });
 
-	document.getElementById('canvasUpdate').addEventListener('click', function () {
-		createCanvas();
-		redraw();
-	});
-	document.getElementById('colorpicker').addEventListener('change', function () {
-		currentColor = this.value;
-	});
-	document.getElementById('bgcolorpicker').addEventListener('change', function () {
-		ctx.fillStyle = this.value;
-		ctx.fillRect(0, 0, canvas.width, canvas.height);
-		redraw();
-		currentBg = ctx.fillStyle;
-	});
-	document.getElementById('controlSize').addEventListener('change', function () {
-		currentSize = this.value;
-		document.getElementById("showSize").innerHTML = this.value;
-	});
-	document.getElementById('saveToImage').addEventListener('click', function () {
-		downloadCanvas(this, 'canvas', 'masterpiece.png');
-	}, false);
-	document.getElementById('eraser').addEventListener('click', eraser);
-	document.getElementById('clear').addEventListener('click', createCanvas);
-	document.getElementById('save').addEventListener('click', save);
-	document.getElementById('load').addEventListener('click', load);
-	document.getElementById('clearCache').addEventListener('click', function () {
-		localStorage.removeItem("savedCanvas");
-		linesArray = [];
-		console.log("Cache cleared!");
-	});
+    // REDRAW
+    function redraw() {
+        for (var i = 1; i < linesArray.length; i++) {
+            ctx.beginPath();
+            ctx.moveTo(linesArray[i - 1].x, linesArray[i - 1].y);
+            ctx.lineWidth = linesArray[i].size;
+            ctx.lineCap = "round";
+            ctx.strokeStyle = linesArray[i].color;
+            ctx.lineTo(linesArray[i].x, linesArray[i].y);
+            ctx.stroke();
+        }
+    }
 
-	// REDRAW 
+    // DRAWING EVENT HANDLERS
+    canvas.addEventListener('mousedown', function () { mousedown(canvas, event); });
+    canvas.addEventListener('mousemove', function () { mousemove(canvas, event); });
+    canvas.addEventListener('mouseup', mouseup);
 
-	function redraw() {
-		for (var i = 1; i < linesArray.length; i++) {
-			ctx.beginPath();
-			ctx.moveTo(linesArray[i - 1].x, linesArray[i - 1].y);
-			ctx.lineWidth = linesArray[i].size;
-			ctx.lineCap = "round";
-			ctx.strokeStyle = linesArray[i].color;
-			ctx.lineTo(linesArray[i].x, linesArray[i].y);
-			ctx.stroke();
-		}
-	}
+    // CREATE CANVAS
+    function createCanvas() {
+        canvas.id = "canvas";
+        canvas.width = parseInt(document.getElementById("sizeX").value);
+        canvas.height = parseInt(document.getElementById("sizeY").value);
+        canvas.style.zIndex = 8;
+        canvas.style.position = "absolute";
+        canvas.style.border = "1px solid";
+        ctx.fillStyle = currentBg;
+        ctx.fillRect(0, 0, canvas.width, canvas.height);
+        body.appendChild(canvas);
+    }
 
-	// DRAWING EVENT HANDLERS
+    // DOWNLOAD CANVAS
+    function downloadCanvas(link, canvas, filename) {
+        link.href = document.getElementById(canvas).toDataURL();
+        link.download = filename;
+    }
 
-	canvas.addEventListener('mousedown', function () { mousedown(canvas, event); });
-	canvas.addEventListener('mousemove', function () { mousemove(canvas, event); });
-	canvas.addEventListener('mouseup', mouseup);
+    // SAVE FUNCTION
+    function save() {
+        localStorage.removeItem("savedCanvas");
+        localStorage.setItem("savedCanvas", JSON.stringify(linesArray));
+        console.log("Saved canvas!");
+    }
 
-	// CREATE CANVAS
+    // LOAD FUNCTION
+    function load() {
+        if (localStorage.getItem("savedCanvas") != null) {
+            linesArray = JSON.parse(localStorage.savedCanvas);
+            redraw();
+            console.log("Canvas loaded.");
+        } else {
+            console.log("No canvas in memory!");
+        }
+    }
 
-	function createCanvas() {
-		canvas.id = "canvas";
-		canvas.width = parseInt(document.getElementById("sizeX").value);
-		canvas.height = parseInt(document.getElementById("sizeY").value);
-		canvas.style.zIndex = 8;
-		canvas.style.position = "absolute";
-		canvas.style.border = "1px solid";
-		ctx.fillStyle = currentBg;
-		ctx.fillRect(0, 0, canvas.width, canvas.height);
-		body.appendChild(canvas);
-	}
+    // ERASER HANDLING
+    function eraser() {
+        currentSize = 50;
+        currentColor = ctx.fillStyle;
+    }
 
-	// DOWNLOAD CANVAS
+    // GET MOUSE POSITION
+    function getMousePos(canvas, evt) {
+        var rect = canvas.getBoundingClientRect();
+        return {
+            x: evt.clientX - rect.left,
+            y: evt.clientY - rect.top
+        };
+    }
 
-	function downloadCanvas(link, canvas, filename) {
-		link.href = document.getElementById(canvas).toDataURL();
-		link.download = filename;
-	}
+    // ON MOUSE DOWN
+    function mousedown(canvas, evt) {
+        var mousePos = getMousePos(canvas, evt);
+        isMouseDown = true;
+        var currentPosition = getMousePos(canvas, evt);
+        ctx.moveTo(currentPosition.x, currentPosition.y);
+        ctx.beginPath();
+        ctx.lineWidth = currentSize;
+        ctx.lineCap = "round";
+        ctx.strokeStyle = currentColor;
+    }
 
-	// SAVE FUNCTION
+    // ON MOUSE MOVE
+    function mousemove(canvas, evt) {
+        if (isMouseDown) {
+            var currentPosition = getMousePos(canvas, evt);
+            ctx.lineTo(currentPosition.x, currentPosition.y);
+            ctx.stroke();
+            store(currentPosition.x, currentPosition.y, currentSize, currentColor);
+        }
+    }
 
-	function save() {
-		localStorage.removeItem("savedCanvas");
-		localStorage.setItem("savedCanvas", JSON.stringify(linesArray));
-		console.log("Saved canvas!");
-	}
+    // STORE DATA
+    function store(x, y, s, c) {
+        var line = {
+            "x": x,
+            "y": y,
+            "size": s,
+            "color": c
+        }
+        linesArray.push(line);
+    }
 
-	// LOAD FUNCTION
+    // ON MOUSE UP
+    function mouseup() {
+        isMouseDown = false;
+        store();
+    }
 
-	function load() {
-		if (localStorage.getItem("savedCanvas") != null) {
-			linesArray = JSON.parse(localStorage.savedCanvas);
-			var lines = JSON.parse(localStorage.getItem("savedCanvas"));
-			for (var i = 1; i < lines.length; i++) {
-				ctx.beginPath();
-				ctx.moveTo(linesArray[i - 1].x, linesArray[i - 1].y);
-				ctx.lineWidth = linesArray[i].size;
-				ctx.lineCap = "round";
-				ctx.strokeStyle = linesArray[i].color;
-				ctx.lineTo(linesArray[i].x, linesArray[i].y);
-				ctx.stroke();
-			}
-			console.log("Canvas loaded.");
-		}
-		else {
-			console.log("No canvas in memory!");
-		}
-	}
+    // FLOOD FILL FUNCTION
+    function startBucketFillOnce() {
+        canvas.removeEventListener('click', startBucketFillOnce);
+        canvas.addEventListener('click', startBucketFill);
+    }
 
-	// ERASER HANDLING
+    function startBucketFill(event) {
+        var mousePos = getMousePos(canvas, event);
+        var imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
+        var targetColor = getPixelColor(imageData, mousePos.x, mousePos.y);
+        // Use the bucket color instead of the color picker value
+        var fillColor = bucketColor;
+        floodFill(imageData, mousePos.x, mousePos.y, targetColor, fillColor);
+        ctx.putImageData(imageData, 0, 0);
+    }
 
-	function eraser() {
-		currentSize = 50;
-		currentColor = ctx.fillStyle
-	}
+    function getPixelColor(imageData, x, y) {
+        var index = (y * imageData.width + x) * 4;
+        return [
+            imageData.data[index],
+            imageData.data[index + 1],
+            imageData.data[index + 2],
+            imageData.data[index + 3]
+        ];
+    }
 
-	// GET MOUSE POSITION
+    function floodFill(imageData, x, y, targetColor, fillColor) {
+        var stack = [];
+        var width = imageData.width;
+        var height = imageData.height;
+        var pixelStack = [[x, y]];
 
-	function getMousePos(canvas, evt) {
-		var rect = canvas.getBoundingClientRect();
-		return {
-			x: evt.clientX - rect.left,
-			y: evt.clientY - rect.top
-		};
-	}
+        while (pixelStack.length) {
+            var newPos, x, y, pixelPos, reachLeft, reachRight;
+            newPos = pixelStack.pop();
+            x = newPos[0];
+            y = newPos[1];
 
-	// ON MOUSE DOWN
+            pixelPos = (y * width + x) * 4;
+            while (y-- >= 0 && matchStartColor(pixelPos)) {
+                pixelPos -= width * 4;
+            }
+            pixelPos += width * 4;
+            ++y;
+            reachLeft = false;
+            reachRight = false;
+            while (y++ < height - 1 && matchStartColor(pixelPos)) {
+                colorPixel(pixelPos);
+                if (x > 0) {
+                    if (matchStartColor(pixelPos - 4)) {
+                        if (!reachLeft) {
+                            pixelStack.push([x - 1, y]);
+                            reachLeft = true;
+                        }
+                    } else if (reachLeft) {
+                        reachLeft = false;
+                    }
+                }
+                if (x < width - 1) {
+                    if (matchStartColor(pixelPos + 4)) {
+                        if (!reachRight) {
+                            pixelStack.push([x + 1, y]);
+                            reachRight = true;
+                        }
+                    } else if (reachRight) {
+                        reachRight = false;
+                    }
+                }
+                pixelPos += width * 4;
+            }
+        }
 
-	function mousedown(canvas, evt) {
-		var mousePos = getMousePos(canvas, evt);
-		isMouseDown = true
-		var currentPosition = getMousePos(canvas, evt);
-		ctx.moveTo(currentPosition.x, currentPosition.y)
-		ctx.beginPath();
-		ctx.lineWidth = currentSize;
-		ctx.lineCap = "round";
-		ctx.strokeStyle = currentColor;
+        function matchStartColor(pixelPos) {
+            var r = imageData.data[pixelPos];
+            var g = imageData.data[pixelPos + 1];
+            var b = imageData.data[pixelPos + 2];
+            return (r === targetColor[0] && g === targetColor[1] && b === targetColor[2]);
+        }
 
-	}
-
-	// ON MOUSE MOVE
-
-	function mousemove(canvas, evt) {
-
-		if (isMouseDown) {
-			var currentPosition = getMousePos(canvas, evt);
-			ctx.lineTo(currentPosition.x, currentPosition.y)
-			ctx.stroke();
-			store(currentPosition.x, currentPosition.y, currentSize, currentColor);
-		}
-	}
-
-	// STORE DATA
-
-	function store(x, y, s, c) {
-		var line = {
-			"x": x,
-			"y": y,
-			"size": s,
-			"color": c
-		}
-		linesArray.push(line);
-	}
-
-	// ON MOUSE UP
-
-	function mouseup() {
-		isMouseDown = false
-		store()
-	}
-
+        function colorPixel(pixelPos) {
+            imageData.data[pixelPos] = fillColor[0];
+            imageData.data[pixelPos + 1] = fillColor[1];
+            imageData.data[pixelPos + 2] = fillColor[2];
+            imageData.data[pixelPos + 3] = fillColor[3];
+        }
+    }
 </script>
