--- a/tets/frame.html
+++ b/tets/frame.html
@@ -98,12 +98,12 @@
             <input type="button" class="updateSize btn btn-success" value="Update" id="canvasUpdate">
         </div>
 
-        <div class="Storage">
+        <!-- <div class="Storage">
             <h3>Storage</h3>
             <input type="button" value="Save" class="btn btn-warning" id="save">
             <input type="button" value="Load" class="btn btn-warning" id="load">
             <input type="button" value="Clear" class="btn btn-warning" id="clearCache">
-        </div>
+        </div> -->
 		
         <div class="extra">
             <h3>Extra</h3>
@@ -112,6 +112,7 @@
     </div>
 </body>
 
+<!-- <script src="/tets/src/canvas.js"> -->
 <script>
     // SETTING ALL VARIABLES
     var isMouseDown = false;
@@ -167,13 +168,13 @@
     }, false);
     document.getElementById('eraser').addEventListener('click', eraser);
     document.getElementById('clear').addEventListener('click', createCanvas);
-    document.getElementById('save').addEventListener('click', save);
-    document.getElementById('load').addEventListener('click', load);
-    document.getElementById('clearCache').addEventListener('click', function () {
-        localStorage.removeItem("savedCanvas");
-        linesArray = [];
-        console.log("Cache cleared!");
-    });
+    // document.getElementById('save').addEventListener('click', save);
+    // document.getElementById('load').addEventListener('click', load);
+    // document.getElementById('clearCache').addEventListener('click', function () {
+    //     localStorage.removeItem("savedCanvas");
+    //     linesArray = [];
+    //     console.log("Cache cleared!");
+    // });
 
     // REDRAW
     function redraw() {
@@ -212,12 +213,12 @@
         link.download = filename;
     }
 
-    // SAVE FUNCTION
-    function save() {
-        localStorage.removeItem("savedCanvas");
-        localStorage.setItem("savedCanvas", JSON.stringify(linesArray));
-        console.log("Saved canvas!");
-    }
+    // // SAVE FUNCTION
+    // function save() {
+    //     localStorage.removeItem("savedCanvas");
+    //     localStorage.setItem("savedCanvas", JSON.stringify(linesArray));
+    //     console.log("Saved canvas!");
+    // }
 
     // LOAD FUNCTION
     function load() {
