--- a/tets/frame2.html
+++ b/tets/frame2.html
@@ -102,6 +102,7 @@
         <div class="extra">
             <h3>Extra</h3>
             <a id="saveToImage" class="btn btn-warning">Download</a>
+            <button id="back">back</button>
         </div>
     </div>
 
@@ -123,6 +124,10 @@
     createCanvas();
 
     // BUTTON EVENT HANDLERS
+
+    document.getElementById('back').onclick = () => {
+        parent.postMessage({ pluginMessage: { type: 'back' } }, '*')
+    }
     document.getElementById('canvasUpdate').addEventListener('click', function () {
         createCanvas();
         redraw();
@@ -138,8 +143,8 @@
     });
 
     document.getElementById('bucket').addEventListener('click', function (event) {
-        event.preventDefault(); 
-        
+        event.preventDefault();
+
         var bucketColorPicker = document.getElementById('bucketColorPicker');
         if (bucketColorPicker.style.display === 'none') {
             bucketColorPicker.style.display = 'block';
@@ -167,8 +172,29 @@
         canvas.removeEventListener('click', startBucketFill);
     }
 
+    function hexToRgbA(hex) {
+        hex = hex.replace(/^#/, '');
+        var bigint = parseInt(hex, 16);
+
+        var r = (bigint >> 16) & 255;
+        var g = (bigint >> 8) & 255;
+        var b = bigint & 255;
+        return [r, g, b, 255]; 
+    }
+
+
+    //     function hexToRgbA(hex) {
+    //         var bigint = parseInt(hex.substring(1), 16);
+    //         var r = (bigint >> 16) & 255;
+    //         var g = (bigint >> 8) & 255;
+    //         var b = bigint & 255;
+    //         return [r, g, b, 255]; // Alpha is set to 255 (fully opaque)
+    //     }
+
+
+
     document.getElementById('bucketColorPicker').addEventListener('change', function () {
-        bucketColor = this.value;
+        bucketColor = hexToRgbA(this.value);
     });
 
     document.getElementById('controlSize').addEventListener('change', function () {
